samples/_failures_safe/1761210428_c3a87b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f66c7f1.c: In function ‘main’:
./samples/SAFE/__tmp_8f66c7f1.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("\nMatrix multiplication A * B:\n");
      |     ^~~~~~
